syntax = "proto3";
package wormhole_foundation.deltachain.wormhole;

option go_package = "github.com/deltaswapio/deltachain/x/wormhole/types";

message ConsensusGuardianSetIndex {
  uint32 index = 1;
  
}
